# disasm

./: Cargo.toml  README.md  build.rs
arch/e2k/: Cargo.toml  alop.decode  build.rs  consts.rs  generated.rs  lib.rs  printer.rs
arch/e2k/tests/: e2k.rs  v1.test  v4.test  v5.test  v6.test  v7.test
arch/riscv/: Cargo.toml  build.rs  consts.rs  generated.rs  insn32.decode  lib.rs  printer.rs
arch/riscv/tests/: riscv.rs  rv32a.test  rv32i.test  rv64f.test  zicsr.test
arch/x86/: Cargo.toml  build.rs  consts.rs  generated.rs  insn.decode  insn_0f.decode  insn_0f_38.decode  insn_0f_3a.decode  insn_evex.decode  insn_vex.decode  lib.rs  printer.rs
arch/x86/benches/: x86.rs
arch/x86/tests/: absolute_address.test  amd64_att.test  amd64_att_suffix.test  evex_er_intel.test  evex_intel.test  evex_sae_intel.test  i386_att.test  nop.test  vex_intel.test  x86.rs
core/: Cargo.toml  bytes.rs  error.rs  flags.rs  insn.rs  lib.rs  macros.rs  operand.rs  printer.rs  symbols.rs  utils.rs
disas/: Cargo.toml  README.md
disas/src/: cli.rs  help_e2k.txt  main.rs  parallel.rs
disasm/: Cargo.toml  arch.rs  lib.rs  operand.rs  printer.rs
disasm/tests/: riscv.rs
src/: arch.rs  bytes.rs  flags.rs  insn.rs  lib.rs  macros.rs  operand.rs  printer.rs  utils.rs
src/arch/e2k/: alop.decode  consts.rs  generated.rs  mod.rs  printer.rs
src/arch/riscv/: consts.rs  gen.rs  generated.rs  insn.decode  insn16.decode  insn32.decode  mod.rs  printer.rs
src/arch/x86/: consts.rs  generated.rs  insn.decode  insn_evex.decode  insn_vex.decode  mod.rs  printer.rs
test/: Cargo.toml  test.rs  utils.rs
test/tests/: tester.rs
tests/: e2k.rs  riscv.rs  riscv_print.rs  tester.rs  util.rs  x86.rs
tests/common/: mod.rs  test.rs  utils.rs
tests/e2k/: registers.test  v1.test  v2.test  v3.test  v4.test  v7.test
tests/riscv/: rv32f.test  rv32m.test  rv64a.test  rv64d.test  rv64i.test  rv64m.test
tests/x86/: aes_intel.test  amd64_att.test  amd64_att_suffix.test  amd64_intel.test  bmi_intel.test  evex_bcst_intel.test  evex_intel.test  ext_intel.test  i386_intel.test  mpx_intel.test  nop.test  registers_intel.test  sse_intel.test  vex_intel.test  x87_att.test  x87_intel.test
