[package]
name = "disasm"
description = "Disassembler library"
version = "0.4.0"
license = "LGPL-3.0-only"
keywords = ["disassembler", "decodetree"]
authors = ["Denis Drakhnia <numas13@gmail.com>"]
repository = "https://github.com/numas13/disasm"
edition = "2021"
rust-version = "1.61"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[features]
default = ["print", "all-arch"]
std = []
print = ["std", "mnemonic"]
mnemonic = []

# architectures
riscv = []
x86 = []
all-arch = [
    "riscv",
    "x86",
]

[build-dependencies]
decodetree = { version = "0.4.7", features = ["gen"] }

[dev-dependencies]
diff = "0.1"
