[workspace.package]
version = "0.5.1"
license = "LGPL-3.0-only"
keywords = ["disassembler", "decodetree"]
authors = ["Denis Drakhnia <numas13@gmail.com>"]
repository = "https://github.com/numas13/disasm"
edition = "2021"
rust-version = "1.64"

[workspace.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[workspace]
resolver = "2"
members = [
    "disasm",
    "core",
    "gen",
    "test",

    "arch/e2k",
    "arch/riscv",
    "arch/x86",
]

[workspace.dependencies]
disasm-core         = { version = "0.5.1", path = "core" }
disasm-gen          = { version = "0.5.1", path = "gen" }
disasm-test         = { version = "0.5.1", path = "test" }

disasm-e2k          = { version = "0.5.1", path = "arch/e2k" }
disasm-riscv        = { version = "0.5.1", path = "arch/riscv" }
disasm-x86          = { version = "0.5.1", path = "arch/x86" }

[workspace.dependencies.criterion]
version = "0.5"
default-features = false
features = ["cargo_bench_support", "rayon"]
