[package]
name = "disas"
description = "Disassembler"
version = "0.1.3"
license = "GPL-3.0-only"
keywords = ["disassembler"]
authors = ["Denis Drakhnia <numas13@gmail.com>"]
repository = "https://github.com/numas13/disas"
edition = "2021"
rust-version = "1.74"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["all-arch", "block-buffering", "parallel", "color", "demangle"]
block-buffering = []
parallel = []
color = ["dep:owo-colors", "dep:supports-color"]
demangle = ["dep:cpp_demangle", "dep:rustc-demangle"]

e2k = ["disasm/e2k"]
riscv = ["disasm/riscv"]
x86 = ["disasm/x86"]
all-arch = [
    "e2k",
    "riscv",
    "x86",
]

[dependencies]
object = "0.36.5"
disasm.workspace = true
bpaf = { version = "0.9", features = ["autocomplete", "dull-color"] }
log = { version = "0.4.22" }
owo-colors = { version = "4", optional = true }
supports-color = { version = "3", optional = true }
cpp_demangle = { version = "0.4", optional = true }
rustc-demangle = { version = "0.1", optional = true }

[dependencies.env_logger]
version = "0.10.2"
default-features = false
features = ["auto-color", "humantime"]
