[package]
name = "disasm-test"
description = "disasm test library"
version.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
diff = "0.1"
disasm-core = { workspace = true, features = ["print"] }
